lab-05/ms-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-ingress
  namespace: microservices
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: mesherfrontend
      port:
        number: 80
  rules:
    - host: orderapp.eazytraining
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mesherfrontend
                port:
                  number: 80
